# handlebars-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
scripts/: transpile.py
src/handlebars/: __init__.py  handlebars_js.py
tests/: basic_test.py
tests/test_cases/: README.md  basic_tags.json  internal_data_variables.json  internal_helpers.json
